--- a/docker_sql/docker-compose.yaml
+++ b/docker_sql/docker-compose.yaml
@@ -2,9 +2,9 @@ services:
   pgdatabase:
     image: postgres:13
     environment:
-      - POSTGRES_USER="root"
-      - POSTGRES_PASSWORD="root"
-      - POSTGRES_DB="ny_taxi"
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=ny_taxi
     volumes:
       - "./ny_taxi_postgres_data:/var/lib/postgresql/data"
     ports:
@@ -12,7 +12,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      - PGADMIN_DEFAULT_EMAIL="admin@admin.com"
-      - PGADMIN_DEFAULT_PASSWORD="root"
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8080:80"
